# claude-asset-man

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.frontend  README.md  ROADMAP.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.gemini/: settings.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks copy.json  tasks.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: d6213d78c3a2_baseline_schema.py
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py  seed.py
backend/app/routes/: admin.py  auth.py  categories.py  stats.py  transactions.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_transactions.py
mobile/: .gitignore  package-lock.json  package.json
mobile/.doc/: prd.md
mobile/app/: _layout.tsx  add-entry.tsx  index.tsx  login.tsx  settings.tsx
mobile/app/(tabs)/: _layout.tsx  (+3 more)
public/: sw.js
references/design/: App.tsx  README.md  constants.tsx  index.html  metadata.json  package.json  types.ts
src/: middleware.ts
src/app/: error.tsx  layout.tsx  loading.tsx  manifest.ts  page.tsx
src/components/: AddEntryModal.tsx  MainView.tsx  SettingsView.tsx  StatsView.tsx  TransactionItem.tsx  UndoToast.tsx
src/lib/: api.ts  constants.ts  supabaseClient.ts  utils.ts
src/services/: gemini.ts
supabase/: schema.sql
supabase/migrations/: 20260203_stats_rpc.sql
(+17 files in other folders)
