[project]
name = "ledger-backend"
version = "1.0.0"
description = "Group ledger FastAPI backend"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.17",
    "pydantic==2.10.3",
    "python-dateutil==2.9.0",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends(...)` as a default argument is the framework's
# standard DI pattern, not a bug.
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
